--- a/web/templates/topic/show.html.eex
+++ b/web/templates/topic/show.html.eex
@@ -1,2 +1,11 @@
-<%= @topic.title %>
-<button>Ping!</button>
+<h5><%= @topic.title %></h5>
+<div class="input-field">
+  <textarea name="" id="" cols="30" rows="10" class="materialize-textarea"></textarea>
+  <button class="btn">Add Comment</button>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    window.createSocket(<%= @topic.id %>)
+  });
+</script>
