--- a/web/templates/topic/show.html.eex
+++ b/web/templates/topic/show.html.eex
@@ -2,6 +2,9 @@
 <div class="input-field">
   <textarea name="" id="" cols="30" rows="10" class="materialize-textarea"></textarea>
   <button class="btn">Add Comment</button>
+  <ul class="collection">
+
+  </ul>
 </div>
 
 <script>
