--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -24,6 +24,7 @@
         <a href="/" class="brand-logo">Discussions</a>
         <ul class="right">
           <%= if @conn.assigns[:user] do %>
+            <li><%= link "Add new topic", to: topic_path(@conn, :new) %></li>
             <li><%= link "Sign out", to: auth_path(@conn, :sign_out) %></li>
           <% else %>
             <li><%= link "Sign in with Github", to: auth_path(@conn, :request, "github") %></li>
